--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 Swift Mailer
 ------------
 
-*This swiftmailer fork has cURL transport to work in limited shared
+======================================================================
+This swiftmailer fork has cURL transport to work in limited shared
 hosting environments(such as uCoz)where ssl stream, shell_exec()
-or mail() functions are unavailable.*
+or mail() functions are unavailable.
+======================================================================
 
 Swift Mailer is a component based mailing solution for PHP 5.
 It is released under the MIT license.
